# my_ai_project

./: README.md  keras_1.py
api_projects/: CMakeLists.txt
api_projects/include/: server.hpp
projects/: project1.py  project2.py  project3.py  tfproje1.py
